compiler/lume_parse/src/snapshots/lume_parse__tests__literal_snapshots@int_hex_positive.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0x55;\")"
---
SOURCE_FILE@0..5
  EXPR_STMT@0..5
    LITERAL@0..4
      INTEGER_LIT@0..4 "0x55"
    SEMICOLON@4..5 ";"
