compiler/lume_parse/src/snapshots/lume_parse__tests__literal_snapshots@int_negative.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"-55;\")"
---
SOURCE_FILE@0..4
  EXPR_STMT@0..4
    UNARY_EXPR@0..3
      SUB@0..1 "-"
      LITERAL@1..3
        INTEGER_LIT@1..3 "55"
    SEMICOLON@3..4 ";"
