compiler/lume_parse/src/snapshots/lume_parse__tests__literal_snapshots@string_empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"\\\"\\\";\")"
---
SOURCE_FILE@0..3
  EXPR_STMT@0..3
    LIT_EXPR@0..2
      LITERAL@0..2
        STRING_LIT@0..2 "\"\""
    SEMICOLON@2..3 ";"
