compiler/lume_parse/src/snapshots/lume_parse__tests__loop_snapshots@inf_loop_break.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"loop { break; }\")"
---
SOURCE_FILE@0..15
  LOOP_STMT@0..15
    LOOP_KW@0..4 "loop"
    WHITESPACE@4..5 " "
    BLOCK@5..15
      LEFT_BRACE@5..6 "{"
      WHITESPACE@6..7 " "
      BREAK_STMT@7..13
        BREAK_KW@7..12 "break"
        SEMICOLON@12..13 ";"
      WHITESPACE@13..14 " "
      RIGHT_BRACE@14..15 "}"
